- La majorité du site est responsive - Correction d'un problème au niveau des colonnes responsives - Ajout d'utilitaires pour cacher/montrer - Le line-height est plus petit sur les petits écrans, ainsi que le gap-comp

--- a/src/scss/components/buttons.scss
+++ b/src/scss/components/buttons.scss
@@ -9,6 +9,7 @@
     border-radius: variables.$btn-border-radius;
     font-family: "RoslindaleDisplayNarrow", serif;
     font-size: variables.$btn-font-size;
+    text-align: center;
     cursor: pointer;
     transition: background-color 0.3s ease;
 
